--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express-handlebars": "^5.3.0",
     "express-session": "^1.17.1",
     "fs": "^0.0.1-security",
+    "googleapis": "^75.0.0",
     "nodemailer": "^6.6.1",
+    "readline": "^1.3.0",
     "redis": "^3.1.2"
   }
 }
