--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.1",
     "fs": "^0.0.1-security",
     "googleapis": "^75.0.0",
+    "multer": "^1.4.2",
     "nodemailer": "^6.6.1",
     "readline": "^1.3.0",
     "redis": "^3.1.2"
