--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +18,11 @@
     "express-session": "^1.17.1",
     "fs": "^0.0.1-security",
     "googleapis": "^75.0.0",
+    "mocha": "^9.0.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.1",
     "readline": "^1.3.0",
-    "redis": "^3.1.2"
+    "redis": "^3.1.2",
+    "should": "^13.2.3"
   }
 }
